--- a/src/locales/zh.yml
+++ b/src/locales/zh.yml
@@ -1,19 +1,31 @@
 nav:
-    posts: 随笔
+    posts: 文章
     recent: 最近
+    about: 关于
+    now: 现在
+    notes: 笔记
+    archive: 归档
+    tags: 标签
 footer:
     home: 首页
-    rss: 订阅
+    rss: RSS
     timeline: 时间线
     collection: 文集
     drafts: 草稿本
-    contact: 联络
+    contact: 联系我
+    github: GitHub
     built-with: 基于
     inspired-by: 灵感来自
 post:
     back: 返回
     post_at: 发布于
     last_modified_at: 最后编辑于
+
+categories:
+    技术: 技术
+    生活: 生活
+    工具: 工具
+    随笔: 随笔
 
 message:
     404-content: 页面未找到
@@ -22,3 +34,22 @@ message:
 pagination:
     previous: 上一页
     next: 下一页
+
+tags:
+    all_tags: 所有标签
+    posts_count: 篇文章
+    posts_count_single: 篇文章
+    no_posts: 该标签下暂无文章
+    view_all_tags: 查看所有标签
+    no_tags: 暂无标签
+
+notes:
+    no_notes: 暂无笔记
+
+codeblock:
+    lines: 行
+    collapse: 折叠
+    expand: 展开
+    copy: 复制
+    copied: 已复制
+    auto_collapsed: 代码过长，已自动折叠
